fix: trim truncate

--- a/src/components/cards/System/style.scss
+++ b/src/components/cards/System/style.scss
@@ -15,8 +15,12 @@
       width: 100%;
       list-style: none;
     }
+    i {
+      vertical-align: middle;
+    }
     .disk-name {
       text-overflow: ellipsis;
+      vertical-align: middle;
     }
     .disk-capacity {
       float: right;
